# krunner-kwallet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install-user.sh  install.sh  plasma-runner-kwallet.desktop.cmake
src/: CMakeLists.txt  entrydialog.cpp  entrydialog.h  entrydialog.ui  kwalletrunner.cpp  kwalletrunner.h  kwalletrunner.json  plasma-runner-kwallet.desktop
src/adddialog/: adddialog.cpp  adddialog.h
src/editdialog/: editdialog.cpp  editdialog.h  editdialog.ui  ui_editdialog.h
src/entrydialog/: entrydialog.cpp  entrydialog.h  ui_entrydialog.h
